# GameScript

./: -o  .gitattributes  .gitignore  CLASS_SELF_SCAN_REPORT.md  CMakeLists.txt  CMakePresets.json  OPERATOR_IMPLEMENTATION_REPORT.md  PROJECT_STRUCTURE.md  README.md  TODO.md  TYPE_OBJECT_REPORT.md  run_bytecode.cpp  run_test.cpp
app/: demo_bindings.cpp  demo_bindings.hpp  main.cpp  run_bytecode.cpp  run_test.cpp
docs/: BENCHMARK_GUIDE.md  BENCHMARK_INTEGRATION.md  BINDING_API.md  BINDING_V2_CMAKE_INTEGRATION.md  BINDING_V2_GUIDE.md  BINDING_V2_MIGRATION_COMPLETE.md  BINDING_V2_README.md  BINDING_V2_REFACTORING.md  DESIGN_ARCHITECTURE.md  DOCS_OVERVIEW.md  LANGUAGE_REFERENCE.md  LANGUAGE_TUTORIAL.md  START_HERE.md  TypeObject.md  WEBSITE_DEPLOYMENT.md  docs-manifest.json  g1-lite-design.md  index.html  start-docs-server.bat
docs/assets/: site.css  site.js
docs/examples/: binding_comparison.cpp
docs/features/: PARAMETER_UNPACK_SPEC.md
include/gs/: binding.hpp  binding.inl  bound_class_type.hpp  bytecode.hpp  compiler.hpp  error_logger.hpp  export.hpp  ir.hpp  (+10 more)
scripts/: --dump-bytecode  README.md  benchmark_exception_throw_site.gs  callable_field_dispatch_test.gs  compare_demo_instruction_counts.py  delete_hook_test.gs  demo.gs  demo.py  demo_gs_py_instruction_comparison.md  demo_minimal.gs  demo_multi_import.gs  demo_no_import.gs  demo_one_import.gs  demo_simple.gs  lambda_scope_test.gs  lambda_test.gs  minimal_test.gs  module_class.gs  module_class_test.gs  module_globals.gs  module_import_test.gs  module_math.gs  simple_bool_test.gs  simple_div_test.gs  simple_string_test.gs  simple_test.gs  test_bench_simple.gs  test_binding.gs  test_bool_null.gs  test_cpp_binding.gs  test_demo_minimal.gs  test_dict_fn.gs  test_error.gs  test_exception.gs  test_exception_native_export.gs  test_exception_rethrow_invalid.gs  test_exception_throw_site.gs  test_exception_typed_catch.gs  test_import_minimal.gs  test_import_simple.gs  (+19 more)
src/: binding.cpp  bound_class_type.cpp  compiler.cpp  error_logger.cpp  global.cpp  os_module.cpp  parser.cpp  runtime.cpp  string_module.cpp  task_system.cpp  thread_pool.cpp  tokenizer.cpp  type_system.cpp  vm.cpp
tools/: gsc.cpp
(+67 files in other folders)
